--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -391,22 +391,14 @@ Phenopowerlaw_singleSlip:
     - master
     - release
 
+
 ###################################################################################################
-Marc_compileIfort2018_1:
+Marc_compileIfort:
   stage: compileMarc
   script:
-    - module load $IntelMarc $HDF5Marc $MSC2018_1
+    - module load $IntelMarc $HDF5Marc $MSC
     - export DAMASK_HDF5=ON
-    - Marc_compileIfort/test.py -m 2018.1
-  except:
-    - master
-    - release
-Marc_compileIfort2019:
-  stage: compileMarc
-  script:
-    - module load $IntelMarc $HDF5Marc $MSC2019
-    - export DAMASK_HDF5=ON
-    - Marc_compileIfort/test.py -m 2019
+    - Marc_compileIfort/test.py
   except:
     - master
     - release
