--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,10 +69,10 @@ variables:
   PETSc_MPICH_Intel:               "$PETSc3_10_3IMPI2018Intel18_4"
   PETSc_MPICH_GNU:                 "$PETSc3_10_3MPICH3_3GNU8_2"
   # ++++++++++++ commercial FEM ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-  MSC2018:                         "FEM/MSC/2018"
+  MSC2018_1:                       "FEM/MSC/2018.1"
   MSC2019:                         "FEM/MSC/2019"
   # ------------ Defaults ----------------------------------------------
-  MSC:                             "$MSC2018"
+  MSC:                             "$MSC2018_1"
   IntelMarc:                       "$IntelCompiler17_8"
   IntelAbaqus:                     "$IntelCompiler16_4"
   HDF5Marc:                        "HDF5/1.10.4/Intel-17.8"
