--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,7 +72,7 @@ variables:
   MSC2018_1:                       "FEM/MSC/2018.1"
   MSC2019:                         "FEM/MSC/2019"
   # ------------ Defaults ----------------------------------------------
-  MSC:                             "$MSC2018_1"
+  MSC:                             "$MSC2019"
   IntelMarc:                       "$IntelCompiler17_8"
   IntelAbaqus:                     "$IntelCompiler16_4"
   HDF5Marc:                        "HDF5/1.10.4/Intel-17.8"
