--- a/examples/ConfigFiles/material.config
+++ b/examples/ConfigFiles/material.config
@@ -1,5 +1,3 @@
-### numerical parameters ###
-
 # The material.config file needs to specify five parts:
 # homogenization, microstructure, crystallite, phase, and texture.
 # You can either put the full text in here or include suited separate files
@@ -8,13 +6,15 @@
 {./Homogenization_Isostrain_SX.config}
 
 <microstructure>
-{./Microstructure_ElementHomogeneous.config}
+[one_only]
+crystallite 1
+(constituent)   phase   1   texture 1 fraction  1.0
 
 <crystallite>
-{./Crystallite_aLittleSomething.config}
+{./Crystallite_All.config}
 
 <phase>
 {./Phase_Phenopowerlaw_Aluminum.config}
 
 <texture>
-{./Texture_Rolling.config}
+{./Texture_Gauss_001.config}
