--- a/examples/ConfigFiles/Crystallite_All.config
+++ b/examples/ConfigFiles/Crystallite_All.config
@@ -1,13 +1,9 @@
 [all]
-(output) phase
-(output) texture
-(output) volume
 (output) orientation    # quaternion
 (output) grainrotation  # deviation from initial orientation as axis (1-3) and angle in degree (4) in crystal reference coordinates
-(output) f              # deformation gradient tensor
-(output) fe             # elastic deformation gradient tensor
-(output) fp             # plastic deformation gradient tensor
-(output) p              # first Piola-Kichhoff stress tensor
-(output) s              # second Piola-Kichhoff stress tensor
-(output) lp             # plastic velocity gradient tensor
-(output) elasmatrix     # elastic stiffness matrix
+(output) F              # deformation gradient tensor
+(output) Fe             # elastic deformation gradient tensor
+(output) Fp             # plastic deformation gradient tensor
+(output) P              # first Piola-Kichhoff stress tensor
+(output) S              # second Piola-Kichhoff stress tensor
+(output) Lp             # plastic velocity gradient tensor
