--- a/examples/SpectralMethod/Polycrystal/material.config
+++ b/examples/SpectralMethod/Polycrystal/material.config
@@ -9,15 +9,13 @@ mech	none
 <crystallite>
 #-------------------#
 [almostAll]
-(output) phase
-(output) texture
 (output) orientation    # quaternion
 (output) grainrotation  # deviation from initial orientation as axis (1-3) and angle in degree (4)
-(output) f              # deformation gradient tensor; synonyms: "defgrad"
-(output) fe             # elastic deformation gradient tensor
-(output) fp             # plastic deformation gradient tensor
-(output) p              # first Piola-Kichhoff stress tensor; synonyms: "firstpiola", "1stpiola"
-(output) lp             # plastic velocity gradient tensor
+(output) F              # deformation gradient tensor
+(output) Fe             # elastic deformation gradient tensor
+(output) Fp             # plastic deformation gradient tensor
+(output) P              # first Piola-Kichhoff stress tensor
+(output) Lp             # plastic velocity gradient tensor
 
 #-------------------#
 <phase>
@@ -37,11 +35,11 @@ plasticity              phenopowerlaw
 
 # only for HDF5 out
 (output) orientation    # quaternion
-(output) f              # deformation gradient tensor; synonyms: "defgrad"
-(output) fe             # elastic deformation gradient tensor
-(output) fp             # plastic deformation gradient tensor
-(output) p              # first Piola-Kichhoff stress tensor; synonyms: "firstpiola", "1stpiola"
-(output) lp             # plastic velocity gradient tensor
+(output) F              # deformation gradient tensor
+(output) Fe             # elastic deformation gradient tensor
+(output) Fp             # plastic deformation gradient tensor
+(output) P              # first Piola-Kichhoff stress tensor
+(output) Lp             # plastic velocity gradient tensor
 
 
 lattice_structure       fcc
