[skip ci] just one slip system family

--- a/examples/ConfigFiles/Phase_Dislotwin_Tungsten.config
+++ b/examples/ConfigFiles/Phase_Dislotwin_Tungsten.config
@@ -14,7 +14,7 @@ SolidSolutionStrength 1.5e8         # Strength due to elements in solid solution
 
 ### Dislocation glide parameters ###
 #per family
-Nslip               12 0 
+Nslip               12 
 slipburgers         2.72e-10        # Burgers vector of slip system [m]
 rhoedge0            1.0e12          # Initial edge dislocation density [m/m**3]
 rhoedgedip0         1.0             # Initial edged dipole dislocation density [m/m**3]
