--- a/examples/ConfigFiles/Phase_Nonlocal_Nickel.config
+++ b/examples/ConfigFiles/Phase_Nonlocal_Nickel.config
@@ -3,31 +3,24 @@
 elasticity              hooke
 plasticity              nonlocal
 /nonlocal/
-
-(output)                rho
-(output)                rho_sgl_mobile
-(output)                rho_sgl_immobile
-(output)                rho_sgl_edge_pos
-(output)                rho_sgl_edge_neg
-(output)                rho_sgl_screw_pos
-(output)                rho_sgl_screw_neg
-(output)                rho_dip_edge
-(output)                rho_dip_screw
+(output)                rho_sgl_mob_edg_pos
+(output)                rho_sgl_imm_edg_pos
+(output)                rho_sgl_mob_edg_neg
+(output)                rho_sgl_imm_edg_neg
+(output)                rho_sgl_mob_scr_pos
+(output)                rho_sgl_imm_scr_pos
+(output)                rho_sgl_mob_scr_neg
+(output)                rho_sgl_imm_scr_neg
+(output)                rho_dip_edg
+(output)                rho_dip_scr
 (output)                rho_forest
-(output)                accumulatedshear
-(output)                shearrate
-(output)                resolvedstress
-(output)                resistance
-(output)                velocity_edge_pos
-(output)                rho_dot_gen
-(output)                rho_dot_sgl2dip_edge
-(output)                rho_dot_sgl2dip_screw
-(output)                rho_dot_ann_ath
-(output)                rho_dot_ann_the_edge
-(output)                rho_dot_ann_the_screw
-(output)                rho_dot_edgejogs
-(output)                rho_dot_flux_edge
-(output)                rho_dot_flux_screw
+(output)                gamma
+(output)                tau_pass
+(output)                v_edg_pos
+(output)                v_edg_neg
+(output)                v_scr_pos
+(output)                v_scr_neg
+
 
 lattice_structure       fcc
 Nslip                   12               # number of slip systems per family
