--- a/examples/ConfigFiles/Phase_Nonlocal_Aluminum.config
+++ b/examples/ConfigFiles/Phase_Nonlocal_Aluminum.config
@@ -4,58 +4,23 @@ elasticity              hooke
 plasticity              nonlocal
 /nonlocal/
 
-(output)                rho
-(output)                rho_edge
-(output)                rho_screw
-(output)                rho_sgl
-(output)                rho_sgl_edge_pos
-(output)                rho_sgl_edge_neg
-(output)                rho_sgl_screw_pos
-(output)                rho_sgl_screw_neg
-(output)                rho_sgl_edge_pos_mobile
-(output)                rho_sgl_edge_neg_mobile
-(output)                rho_sgl_screw_pos_mobile
-(output)                rho_sgl_screw_neg_mobile
-(output)                rho_sgl_edge_pos_immobile
-(output)                rho_sgl_edge_neg_immobile
-(output)                rho_sgl_screw_pos_immobile
-(output)                rho_sgl_screw_neg_immobile
-(output)                rho_dip_edge
-(output)                rho_dip_screw
+(output)                rho_sgl_mob_edg_pos
+(output)                rho_sgl_imm_edg_pos
+(output)                rho_sgl_mob_edg_neg
+(output)                rho_sgl_imm_edg_neg
+(output)                rho_sgl_mob_scr_pos
+(output)                rho_sgl_imm_scr_pos
+(output)                rho_sgl_mob_scr_neg
+(output)                rho_sgl_imm_scr_neg
+(output)                rho_dip_edg
+(output)                rho_dip_scr
 (output)                rho_forest
-(output)                delta
-(output)                delta_sgl
-(output)                delta_dip
-(output)                shearrate
-(output)                resolvedstress
-(output)                resolvedstress_back
-(output)                resolvedstress_external
-(output)                resistance
-(output)                rho_dot
-(output)                rho_dot_sgl
-(output)                rho_dot_sgl_mobile
-(output)                rho_dot_dip
-(output)                rho_dot_gen_edge
-(output)                rho_dot_gen_screw
-(output)                rho_dot_sgl2dip_edge
-(output)                rho_dot_sgl2dip_screw
-(output)                rho_dot_ann_ath
-(output)                rho_dot_ann_the
-(output)                rho_dot_ann_the_edge
-(output)                rho_dot_ann_the_screw
-(output)                rho_dot_edgejogs
-(output)                rho_dot_flux
-(output)                rho_dot_flux_mobile
-(output)                rho_dot_flux_edge
-(output)                rho_dot_flux_screw
-(output)                velocity_edge_pos
-(output)                velocity_edge_neg
-(output)                velocity_screw_pos
-(output)                velocity_screw_neg
-(output)                maximumDipoleHeight_edge
-(output)                maximumDipoleHeight_screw
-(output)                accumulated_shear
-(output)                dislocationstress
+(output)                gamma
+(output)                tau_pass
+(output)                v_edg_pos
+(output)                v_edg_neg
+(output)                v_scr_pos
+(output)                v_scr_neg
 
 lattice_structure       fcc
 Nslip                   12                       # number of slip systems
