pytest should be part of the test suite

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 ---
 stages:
   - prepareAll
+  - python
   - preprocessing
   - postprocessing
   - compilePETSc
@@ -99,6 +100,16 @@ checkout:
     - git submodule update --init
     - source env/DAMASK.sh
     - make processing
+  except:
+    - master
+    - release
+
+###################################################################################################
+Pytest:
+  stage: python
+  script:
+    - cd $DAMASKROOT/python
+    - pytest
   except:
     - master
     - release
