--- a/.gitattributes
+++ b/.gitattributes
@@ -3,8 +3,8 @@
 # always use LF, even if the files are edited on windows, they need to be compiled/used on unix
 * text eol=lf
 
-# Denote all files that are truly binary and should not be modified.
+# Denote all files that are binary and should not be modified.
 *.png binary
 *.jpg binary
-*.cae binary
 *.hdf5 binary
+*.pdf binary
